--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
+    "test": "jest",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
@@ -11,17 +12,27 @@
   "dependencies": {
     "@expo/config-plugins": "^7.2.5",
     "@nozbe/watermelondb": "^0.27.0",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "expo": "~49.0.8",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-native": "0.72.4",
+    "react-native-paper": "^5.10.4",
+    "react-native-safe-area-context": "^4.6.3",
+    "react-native-screens": "~3.22.0",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-decorators": "^7.22.10",
+    "@types/jest": "^29.5.4",
     "@types/react": "~18.0.14",
+    "@types/react-test-renderer": "^18.0.1",
+    "better-sqlite3": "^8.6.0",
     "jest": "^29.6.4",
+    "react-test-renderer": "^18.2.0",
     "typescript": "^5.1.3"
   },
   "private": true
