--- a/package.json
+++ b/package.json
@@ -25,15 +25,18 @@
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.22.15",
     "@babel/plugin-proposal-decorators": "^7.22.10",
+    "@babel/preset-env": "^7.22.15",
     "@types/jest": "^29.5.4",
     "@types/react": "~18.0.14",
     "@types/react-test-renderer": "^18.0.1",
+    "babel-jest": "^29.6.4",
     "better-sqlite3": "^8.6.0",
     "jest": "^29.6.4",
     "react-test-renderer": "^18.2.0",
-    "typescript": "^5.1.3"
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.2.2"
   },
   "private": true
 }
