--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo/config-plugins": "^7.2.5",
     "@nozbe/watermelondb": "^0.27.0",
+    "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~49.0.8",
@@ -28,12 +29,15 @@
     "@babel/core": "^7.22.15",
     "@babel/plugin-proposal-decorators": "^7.22.10",
     "@babel/preset-env": "^7.22.15",
+    "@babel/preset-typescript": "^7.22.15",
     "@types/jest": "^29.5.4",
     "@types/react": "~18.0.14",
     "@types/react-test-renderer": "^18.0.1",
     "babel-jest": "^29.6.4",
     "better-sqlite3": "^8.6.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.6.4",
+    "jest-transform-stub": "^2.0.0",
     "react-test-renderer": "^18.2.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
