--- a/package.json
+++ b/package.json
@@ -1,46 +1,34 @@
 {
-  "name": "nutricore",
+  "name": "jobapp",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "test": "jest",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/config-plugins": "^7.2.5",
-    "@nozbe/watermelondb": "^0.27.0",
-    "@react-navigation/drawer": "^6.6.3",
-    "@react-navigation/native": "^6.1.7",
-    "@react-navigation/native-stack": "^6.9.13",
-    "expo": "~49.0.8",
+    "@expo/config-plugins": "7.2.2",
+    "@expo/webpack-config": "^19.0.0",
+    "@morrowdigital/watermelondb-expo-plugin": "^2.3.1",
+    "@nozbe/watermelondb": "^0.27.1",
+    "@types/react": "~18.2.14",
+    "expo": "~49.0.15",
+    "expo-build-properties": "~0.8.3",
+    "expo-constants": "~14.4.2",
+    "expo-dev-client": "~2.4.13",
+    "expo-router": "^2.0.14",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.4",
-    "react-native-paper": "^5.10.4",
-    "react-native-safe-area-context": "^4.6.3",
-    "react-native-screens": "~3.22.0",
-    "ts-node": "^10.9.1"
+    "react-native": "0.72.10",
+    "react-native-paper": "^5.12.3",
+    "react-native-web": "~0.19.6",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.15",
-    "@babel/plugin-proposal-decorators": "^7.22.10",
-    "@babel/preset-env": "^7.22.15",
-    "@babel/preset-typescript": "^7.22.15",
-    "@types/jest": "^29.5.4",
-    "@types/react": "~18.0.14",
-    "@types/react-test-renderer": "^18.0.1",
-    "babel-jest": "^29.6.4",
-    "better-sqlite3": "^8.6.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.6.4",
-    "jest-transform-stub": "^2.0.0",
-    "react-test-renderer": "^18.2.0",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.2.2"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
