--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@morrowdigital/watermelondb-expo-plugin": "^2.3.1",
     "@nozbe/watermelondb": "^0.27.1",
     "@types/react": "~18.2.14",
+    "better-sqlite3": "^9.4.3",
     "expo": "~49.0.15",
     "expo-build-properties": "~0.8.3",
     "expo-constants": "~14.4.2",
@@ -24,11 +25,20 @@
     "react": "18.2.0",
     "react-native": "0.72.10",
     "react-native-paper": "^5.12.3",
+    "react-native-reanimated": "^3.7.2",
     "react-native-web": "~0.19.6",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/jest": "^29.5.12",
+    "@types/react-test-renderer": "^18.0.7",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-transform-stub": "^2.0.0",
+    "react-test-renderer": "^18.2.0",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2"
   },
   "private": true
 }
